--- a/index.html
+++ b/index.html
@@ -8,9 +8,21 @@
     <title>Document</title>
 </head>
 <body>
+
+    <!-- EMAIL -->
+    
     <span id="sign-in"></span>
-    <!-- SCRIPT -->
+    
+    <!-- GIOCO DADI -->
+
+    <!-- <h2 id="punteggio-giocatore"></h2>
+    <h2 id="punteggio-computer"></h2>
+    <h1 id="risultato"></h2>  -->
+
+    <!-- SCRIPT EMAIL -->
     <script src="js/main-email.js"></script>
+
+    <!-- SCRIPT DADI  -->
     <!-- <script src="js/main-dadi.js"></script> -->
 </body>
 </html>
